--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,87 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-58633202-3', 'auto');
+  ga('send', 'pageview');
+
+    </script>
+
+    <meta charset="utf-8" />
+    <title>3 MCs & 1 DJ</title>
+
+    <link rel="stylesheet" href="css/main.css" type="text/css" />
+  </head>
+
+  <body id="index" class="home">
+  
+    <header id="banner" class="body">
+        
+        <img id="logo" src="images/logo1.png" />
+        <strong id="established">Established 2015</strong>
+      <nav><ul>
+	  <li class="active"><a href="#">Home</a></li>
+<!--	  <li><a href="#">Staff</a></li>
+	  <li><a href="#">Contact</a></li> -->
+      </ul></nav>
+    </header>
+    <div id="container">
+      <div id="main" class="column">
+    <aside id="featured" class="body"><article>
+	<hgroup>
+	  <h2>Welcome</h2>
+	  <h3>A new minecraft server arises</h3>
+	</hgroup>
+	<p>Welcome to the 3 MCs & 1 DJ <a target="_blank" href="http://www.minecraft.net">Minecraft</a> server. This is a fairly new setup, so expect changes to come frequently as we continue to improve and expand.
+	</p>
+    </article>
+    <a href="http://minecraftservers.org/server/255533" target="_blank"><img src="http://status.minecraftservers.org/nether/255533.png" alt="Three MCs and one DJ Minecraft server" width="540" height="90" /></a>
+    </aside>
+    </div>
+    <div id="sidepanel" class="column">
+        If you enjoy the server and would like to continue using it, please consider donating. Your donation will be used to maintain and upgrade the system.
+        <form id="donate" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="4QXMU8J3VK6RY">
+            <input type="submit" value="Donate" />
+        </form>
+	<iframe src="https://www.mymumble.com/srv/status/widget/?ip=screamingnaked.mymumble.com&port=4527&theme=minecraft" width="210" height="500" frameborder="0"></iframe>
+    </div>
+    <div id="ad" class="column">
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- 3mcs main -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-7273048419649468"
+             data-ad-slot="3769248236"
+             data-ad-format="auto"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+    </div>
+      <!--
+          <footer id="contentinfo" class="body">
+              <address id="about" class="vcard body">
+                  <span class="primary">
+                      <strong><a href="#" class="fn url">3 MCs & 1 DJ</a></strong>
+                      <span class="role">Amazing Minecraft</span>
+                  </span>
+                  <span class="bio"></span> 
+              </address>
+              <p>
+                  2015 <a href="http://threemcsandonedj.com:8081">3 MCs & 1 DJ</a>
+
+              </p>
+
+          </footer>
+   -->
+  </body>
+</html>
+
+    
