Added custom titles to the pages

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,7 @@
     </script>
 
     <meta charset="utf-8" />
-    <title>3 MCs & 1 DJ</title>
+    <title>Home | 3 MCs & 1 DJ</title>
 
     <link rel="stylesheet" href="css/main.css" type="text/css" />
   </head>
