--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,10 @@
+<html>
+<title>
+  Help | 3 MCs & 1 DJ
+</title>
+<body>
 <h1>StaticPages#help</h1>
 <p>Find me in app/views/static_pages/help.html.erb</p>
+</body>
+</html>
+
